--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,13 +23,28 @@
       <!--Top Row Starts-->
       <div class="row justify-content-center">
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn1"
+          />
         </div>
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn2"
+          />
         </div>
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn3"
+          />
         </div>
       </div>
       <!--Top Row Ends-->
@@ -37,13 +52,28 @@
       <!--Mid Row Starts-->
       <div class="row justify-content-center">
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn4"
+          />
         </div>
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn5"
+          />
         </div>
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn6"
+          />
         </div>
       </div>
       <!--Mid Row Ends-->
@@ -51,13 +81,28 @@
       <!--Bottom Row Starts-->
       <div class="row justify-content-center">
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn7"
+          />
         </div>
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn8"
+          />
         </div>
         <div class="show-modal col-4">
-          <img src="WiseAlley_SmileyFace.png" class="img-fluid" alt="" />
+          <img
+            src="WiseAlley_SmileyFace.png"
+            class="img-fluid"
+            alt=""
+            id="btn9"
+          />
         </div>
       </div>
       <!--Bottom Row Ends-->
@@ -65,17 +110,17 @@
       <!-- Question and answers here-->
       <div class="modal-question hidden" id="questionpop">
         <button class="close-modal">&times;</button>
-        <% for (let i=0; i<questions.length; i++) { %>
+        <!-- <% for (let i=0; i<questions.length; i++) { %> -->
         <p><%= questions[i].question %></p>
-            <input type="radio" id="a1" name="answer" />
-            <label for="a1"><%= questions[i].a %></label><br />
-            <input type="radio" id="b1" name="answer" />
-            <label for="b1"><%= questions[i].b %></label><br />
-            <input type="radio" id="c1" name="answer" />
-            <label for="c1"><%= questions[i].c %></label><br />
-            <input type="radio" id="d1" name="answer" />
-            <label for="d1"><%= questions[i].d %></label><br />
-        <% } %>
+        <input type="radio" id="a1" name="answer" />
+        <label for="a1"><%= questions[i].a %></label><br />
+        <input type="radio" id="b1" name="answer" />
+        <label for="b1"><%= questions[i].b %></label><br />
+        <input type="radio" id="c1" name="answer" />
+        <label for="c1"><%= questions[i].c %></label><br />
+        <input type="radio" id="d1" name="answer" />
+        <label for="d1"><%= questions[i].d %></label><br />
+        <!-- <% } %> -->
         <!-- <a href="#" class="close-modal">Close</a> -->
       </div>
       <div class="overlay hidden"></div>
